--- a/src/partials/customer_reviews.html
+++ b/src/partials/customer_reviews.html
@@ -1,149 +1,129 @@
 <section class="section customer" id="customer">
   <h2 hidden>slider customer hidden</h2>
-  
 
-    
-<!-- Swiper -->
-<div class="swiper">
-  <div class="swiper-wrapper">
-    <!-- swiper slide! -->
+  <!-- Swiper -->
+  <div class="swiper">
+    <div class="swiper-wrapper">
+      <!-- swiper slide! -->
       <div class="swiper-slide">
         <div class="customer__container">
-         <!-- swiper slide! -->
-         <!-- CONTENT -->
-         <!-- IMG -->
-        <img class="customer__photos" src="/images/customer_reviews/slm/card1_result.webp" alt="customer">
-        <!-- TEXT -->
-        <div class="customer__blockquote">
-       <p class="customer__text">
-          Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem ipsum primis in nibh vel risus.
-       </p>
+          <!-- swiper slide! -->
+          <!-- CONTENT -->
+          <!-- IMG -->
+          <img
+            class="customer__photos"
+            src="/images/customer_reviews/slm/card1_result.webp"
+            alt="customer"
+          />
+          <!-- TEXT -->
+          <div class="customer__blockquote">
+            <p class="customer__text">
+              Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In
+              hendrerit nulla quam nunc, accumsan congue. Lorem ipsum primis in nibh vel risus.
+            </p>
+          </div>
+          <!-- COMMENT -->
+          <ul class="customer__carusel">
+            <li class="customer__items">
+              <svg width="4" height="4">
+                <use href="/images/customer_reviews/slm/dots.svg"></use>
+              </svg>
+            </li>
+            <li class="customer__items">
+              <svg width="12" height="12">
+                <use href="/images/customer_reviews/slm/dots.svg"></use>
+              </svg>
+            </li>
+            <li class="customer__items">
+              <svg width="4" height="4">
+                <use href="/images/customer_reviews/slm/dots.svg"></use>
+              </svg>
+            </li>
+          </ul>
+          <p class="customer__comment">Emily, Los Angeles</p>
+        </div>
       </div>
-      <!-- COMMENT -->
-      <ul class="customer__carusel">
-        <li class="customer__items">
-          <svg width="4" height="4">
-            <use href="/images/customer_reviews/slm/dots.svg"></use>
-          </svg>
-        </li>
-        <li class="customer__items">
-          <svg width="12" height="12">
-            <use href="/images/customer_reviews/slm/dots.svg"></use>
-          </svg>
-        </li> 
-       <li class="customer__items">
-          <svg width="4" height="4">
-            <use href="/images/customer_reviews/slm/dots.svg"></use>
-          </svg>
-        </li>
-      </ul>
-      <p class="customer__comment">Emily, Los Angeles</p>
-    </div>
-  </div>
-    <!-- SECOND SLIDE -->
-    <div class="swiper-slide">
-      <div class="customer__container">
-      <!-- swiper slide! -->
-      <!-- CONTENT -->
-      <!-- IMG -->
-     <img class="customer__photos" src="/images/customer_reviews/slm/card2_result.webp" alt="customer">
-     <!-- TEXT -->
-     <div class="customer__blockquote">
-    <p class="customer__text">
-       Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem ipsum primis in nibh vel risus.
-    </p>
-   </div>
+      <!-- SECOND SLIDE -->
+      <div class="swiper-slide">
+        <div class="customer__container">
+          <!-- swiper slide! -->
+          <!-- CONTENT -->
+          <!-- IMG -->
+          <img
+            class="customer__photos"
+            src="/images/customer_reviews/slm/card2_result.webp"
+            alt="customer"
+          />
+          <!-- TEXT -->
+          <div class="customer__blockquote">
+            <p class="customer__text">
+              Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In
+              hendrerit nulla quam nunc, accumsan congue. Lorem ipsum primis in nibh vel risus.
+            </p>
+          </div>
 
-   <!-- COMMENT -->
-   <ul class="customer__carusel">
-    <li class="customer__items">
-      <svg width="4" height="4">
-        <use href="/images/customer_reviews/slm/dots.svg"></use>
-      </svg>
-    </li>
-    <li class="customer__items">
-      <svg width="12" height="12">
-        <use href="/images/customer_reviews/slm/dots.svg"></use>
-      </svg>
-    </li> 
-   <li class="customer__items">
-      <svg width="4" height="4">
-        <use href="/images/customer_reviews/slm/dots.svg"></use>
-      </svg>
-    </li>
-  </ul>
-   <p class="customer__comment">Viktoria, Ukraine</p>
- </div>
-</div>
-         <!-- THIRD SLIDE -->
-    <div class="swiper-slide">
-      <div class="customer__container">
-      <!-- swiper slide! -->
-      <!-- CONTENT -->
-      <!-- IMG -->
-     <img class="customer__photos" src="/images/customer_reviews/slm/card3_result.webp" alt="customer">
-     <!-- TEXT -->
-     <div class="customer__blockquote">
-    <p class="customer__text">
-       Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem ipsum primis in nibh vel risus.
-    </p>
-   </div>
-   <!-- COMMENT -->
-   <ul class="customer__carusel">
-    <li class="customer__items">
-      <svg width="4" height="4">
-        <use href="/images/customer_reviews/slm/dots.svg"></use>
-      </svg>
-    </li>
-    <li class="customer__items">
-      <svg width="12" height="12">
-        <use href="/images/customer_reviews/slm/dots.svg"></use>
-      </svg>
-    </li> 
-   <li class="customer__items">
-      <svg width="4" height="4">
-        <use href="/images/customer_reviews/slm/dots.svg"></use>
-      </svg>
-    </li>
-  </ul> 
-   <p class="customer__comment">Ursula, Norway</p>
+          <!-- COMMENT -->
+          <ul class="customer__carusel">
+            <li class="customer__items">
+              <svg width="4" height="4">
+                <use href="/images/customer_reviews/slm/dots.svg"></use>
+              </svg>
+            </li>
+            <li class="customer__items">
+              <svg width="12" height="12">
+                <use href="/images/customer_reviews/slm/dots.svg"></use>
+              </svg>
+            </li>
+            <li class="customer__items">
+              <svg width="4" height="4">
+                <use href="/images/customer_reviews/slm/dots.svg"></use>
+              </svg>
+            </li>
+          </ul>
+          <p class="customer__comment">Viktoria, Ukraine</p>
+        </div>
+      </div>
+      <!-- THIRD SLIDE -->
+      <div class="swiper-slide">
+        <div class="customer__container">
+          <!-- swiper slide! -->
+          <!-- CONTENT -->
+          <!-- IMG -->
+          <img
+            class="customer__photos"
+            src="/images/customer_reviews/slm/card3_result.webp"
+            alt="customer"
+          />
+          <!-- TEXT -->
+          <div class="customer__blockquote">
+            <article class="customer__text">
+              <div class="customer__text--span"></div>
+              Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In
+              hendrerit nulla quam nunc, accumsan congue. Lorem ipsum primis in nibh vel risus.
+            </article>
+          </div>
+          <!-- COMMENT -->
+          <ul class="customer__carusel">
+            <li class="customer__items">
+              <svg width="4" height="4">
+                <use href="/images/customer_reviews/slm/dots.svg"></use>
+              </svg>
+            </li>
+            <li class="customer__items">
+              <svg width="4" height="4">
+                <use href="/images/customer_reviews/slm/dots.svg"></use>
+              </svg>
+            </li>
+            <li class="customer__items">
+              <svg width="4" height="4">
+                <use href="/images/customer_reviews/slm/dots.svg"></use>
+              </svg>
+            </li>
+          </ul>
+          <p class="customer__comment">Ursula, Norway</p>
+        </div>
+      </div>
+    </div>
+    <div class="swiper-pagination"></div>
   </div>
-   </div>
- </div>
- <div class="swiper-pagination"></div>
-</div>
 </section>
-    
-    <!-- <div class="swiper-slide customer__blockquote">
-      <p class="swiper-slide customer__text">
-        The ice cream is truly incredible. You can sit inside depending on the time of day but it tends to get packed pretty often and early.The flavors are both Traditional Ice cream flavors and amazing uniquely Indian tastes. Favorites...
-      </p>
-    </div>
-    <div class="swiper-slide customer__blockquote">
-      <p class="swiper-slide customer__text">
-        Everyone in our group loved it. Mango was the bomb dot com. Service was fast. Staff were very friendly. Shop was very clean. Highly recommend!
-      </p>
-    </div>
-    <div class="swiper-slide customer__blockquote">
-      <p class="swiper-slide customer__text">
-         you like cones get the waffle cone. It is my favorite. The cone is fresh made and just delicious with this ice cream! You can buy the ice cream by the scoop of the multi-service Family pack..
-      </p>
-    </div>
-  </div>
-
-    <ul class="customer__breadcrumb">
-      <li class="customer__item"></li>
-      <li class="customer__item"></li>
-      <li class="customer__item"></li>
-    </ul> 
-
-    
-  < Пагінація хатинки  -->
- 
-  
-   <!-- хатинка і еліпс -->
-   
-</div>
-</div>
-</section>  
-
