--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -241,6 +241,7 @@
   transition: 450ms $functional-cubic;
   transform: translateX(100%);
   width: 250px;
+  
   top: 0;
   right: 0;
 
@@ -248,6 +249,8 @@
     // width: 40%;
     // height: 100%;
     // left: 60%;
+  width: 40%;
+
   }
   @include mq(desktop) {
     display: none;
