--- a/src/partials/customer_reviews.html
+++ b/src/partials/customer_reviews.html
@@ -96,11 +96,11 @@
           />
           <!-- TEXT -->
           <div class="customer__blockquote">
-            <article class="customer__text">
+            <p class="customer__text">
               <div class="customer__text--span"></div>
               Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In
               hendrerit nulla quam nunc, accumsan congue. Lorem ipsum primis in nibh vel risus.
-            </article>
+            </p>
           </div>
           <!-- COMMENT -->
           <ul class="customer__carusel">
