--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -90,7 +90,7 @@
 
     <ul class="group">
       <li class="group__item">
-        <button class="group__btn group__btn--red" type="button">
+        <button class="group__btn group__btn--red js-open-modal" type="button"  data-modal="map" >
           Our Locations
           <svg class="group__icon">
             <use href="./images/icons.svg#icon-red-button"></use>
