--- a/src/partials/components/popap.html
+++ b/src/partials/components/popap.html
@@ -34,7 +34,7 @@
         </div>
       </div>
       <div class="modal-form__item">
-        <label for="modal-form-mail" class="modal-form__lable">Почта</label>
+        <label for="modal-form-mail" class="modal-form__lable">E-mail</label>
         <div class="modal-form__box">
           <input
             type="email"
